<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="Tarama timer"
            app:menu="@menu/top_app_bar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Note: A RecyclerView can also be used -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainPageContent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- Scrollable content -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:minHeight="64dp"
                android:layout_marginTop="5dp">

                <ImageView
                    android:id="@+id/name_icon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_baseline_label_24" />

                <TextView
                    android:id="@+id/name_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/name_icon"
                    android:maxLines="1"
                    android:text="Nom"

                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/name_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/name_title"
                    android:layout_gravity="center"
                    android:layout_toEndOf="@id/name_icon"
                    android:maxLength="30"
                    android:text="Nom"
                    android:textAlignment="center" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:minHeight="64dp"
                android:layout_marginTop="5dp">

                <ImageView
                    android:id="@+id/prepare_icon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_baseline_how_to_reg_24" />

                <TextView
                    android:id="@+id/prepare_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/prepare_icon"
                    android:maxLines="1"
                    android:text="@string/preparation"

                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textSize="20dp" />

                    <EditText
                        android:id="@+id/prepare_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/prepare_title"
                        android:layout_gravity="center"
                        android:layout_toEndOf="@id/prepare_icon"
                        android:inputType="number"
                        android:maxLength="3"
                        android:text="5"
                        android:textAlignment="center"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:minHeight="64dp"
                android:layout_marginTop="5dp">

                <ImageView
                    android:id="@+id/work_icon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_running_icon" />

                <TextView
                    android:id="@+id/work_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/work_icon"
                    android:maxLines="1"
                    android:text="@string/travail"

                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/work_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/work_title"
                    android:layout_gravity="center"
                    android:layout_toEndOf="@id/work_icon"
                    android:inputType="number"
                    android:maxLength="3"
                        android:text="5"
                    android:textAlignment="center"/>
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:minHeight="64dp"
                android:layout_marginTop="5dp">

                <ImageView
                    android:id="@+id/rest_icon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_baseline_airline_seat_recline_extra_24" />

                <TextView
                    android:id="@+id/rest_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/rest_icon"
                    android:maxLines="1"
                    android:text="@string/repos"

                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/rest_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rest_title"
                    android:layout_gravity="center"
                    android:layout_toEndOf="@id/rest_icon"
                    android:inputType="number"
                    android:maxLength="3"
                        android:text="5"
                    android:textAlignment="center"/>
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:minHeight="64dp"
                android:layout_marginTop="5dp">

                <ImageView
                    android:id="@+id/cycles_icon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_baseline_cached_24" />

                <TextView
                    android:id="@+id/cycles_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/cycles_icon"
                    android:maxLines="1"
                    android:text="@string/nombre_de_cycles"

                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/cycles_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cycles_title"
                    android:layout_gravity="center"
                    android:layout_toEndOf="@id/cycles_icon"
                    android:inputType="number"
                    android:maxLength="3"
                    android:text="5"
                    android:textAlignment="center" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:minHeight="64dp"
                android:layout_marginTop="5dp">

                <ImageView
                    android:id="@+id/sets_icon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_baseline_replay_24" />

                <TextView
                    android:id="@+id/sets_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/sets_icon"
                    android:maxLines="1"
                    android:text="@string/nombre_de_sets"

                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/sets_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sets_title"
                    android:layout_gravity="center"
                    android:layout_toEndOf="@id/sets_icon"
                    android:inputType="number"
                    android:maxLength="3"
                        android:text="5"
                    android:textAlignment="center"/>
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:minHeight="64dp"
                android:layout_marginTop="5dp">

                <ImageView
                    android:id="@+id/restSet_icon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_baseline_chair_24" />

                <TextView
                    android:id="@+id/restSet_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/restSet_icon"
                    android:maxLines="1"
                    android:text="Repos entre les sets"

                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/restSet_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/restSet_title"
                    android:layout_gravity="center"
                    android:layout_toEndOf="@id/restSet_icon"
                    android:inputType="number"
                    android:maxLength="3"
                        android:text="5"
                    android:textAlignment="center"/>
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:minHeight="64dp"
                android:layout_marginTop="5dp">

                <ImageView
                    android:id="@+id/cooldown_icon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_baseline_hotel_24" />

                <TextView
                    android:id="@+id/cooldown_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/cooldown_icon"
                    android:maxLines="1"
                    android:text="@string/cooldown"

                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/cooldown_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cooldown_title"
                    android:layout_gravity="center"
                    android:layout_toEndOf="@id/cooldown_icon"
                    android:inputType="number"
                    android:maxLength="3"
                        android:text="5"
                    android:textAlignment="center"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:minHeight="64dp"
                android:layout_marginTop="5dp">

                <ImageView
                    android:id="@+id/color_icon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_baseline_color_lens_24" />

                <TextView
                    android:id="@+id/color_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/color_icon"
                    android:maxLines="1"
                    android:text="@string/couleur"

                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textSize="20dp" />

                <Button
                    android:id="@+id/color_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/color_title"
                    android:layout_gravity="center"
                    android:layout_toEndOf="@id/color_icon"
                    android:text="Selectionner" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:minHeight="64dp"
                android:layout_marginTop="5dp">

                <ImageView
                    android:id="@+id/icon_icon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_baseline_add_24" />

                <TextView
                    android:id="@+id/icon_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/icon_icon"
                    android:maxLines="1"
                    android:text="@string/icon"

                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textSize="20dp" />

                <Button
                    android:id="@+id/icon_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/icon_title"
                    android:layout_gravity="center"
                    android:onClick="showIconDialog"
                    android:layout_toEndOf="@id/icon_icon"
                    android:text="Selectionner" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:minHeight="64dp"
                android:layout_marginTop="15dp">

                <Button
                    android:id="@+id/submit_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Valider" />

            </RelativeLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>